# drix_project11

./: CMakeLists.txt  package.xml  setup.py
config/: diagnostic_analyzers.yaml  drix.rviz  drix.yaml  drix_operator.yaml  drix_operator_robot.yaml  drix_operator_station_core.desktop  drix_operator_station_robobox.desktop  drix_operator_station_ui.desktop  drix_sim.yaml  mesobot.yaml  navigator.yaml  nui.yaml  platform.yaml  usbl_operator.yaml
doc/: drix_8.md  mesobot_and_drix_8.md
launch/: debug_ais.launch  drix.launch  drix_core.launch  drix_sim.launch  drixcloud.launch  ek80_layer_trackers.launch  ek80_to_pointcloud.launch  em712_watercolumn.launch  operator_core.launch  operator_sim.launch  operator_ui.launch  replay_hawaii.launch  robobox_interface.launch  robobx_interface.launch  simrad_ek80.launch  snmp_wifi.launch  usbl.launch
nodes/: ais_to_auv  nmea_to_string_stamped  wifi_rates.py
scripts/: drix_as_core.bash  drix_run_on_startup.bash  enable_mesobot_usbl_pingers.bash  robobox_as_core.bash  sim_drix_as_core.bash  sim_robobox_as_core.bash  start_tmux_drixcloud.bash  start_tmux_operator.bash  start_tmux_operator.sh  start_tmux_operator_ui.sh  start_tmux_project11.bash  start_tmux_robobox_interface.bash  start_tmux_robobox_interface.sh
src/: geopoint_to_asv.cpp  geopose_to_asv.cpp  robobox_bag_to_project11.cpp  robobox_interface.cpp
