<?xml version="1.0"?>
<package format="2">
  <name>drix_project11</name>
  <version>0.0.0</version>
  <description>
    Project11 packages related to a the iXblue DriX.
  </description>

  <author email="roland@ccom.unh.edu">Roland Arsenault</author>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>project11</exec_depend>
  
</package>
