<?xml version="1.0"?>
<package format="2">
  <name>drix_project11</name>
  <version>0.0.0</version>
  <description>
    Project11 packages related to a the iXblue DriX.
  </description>

  <author email="roland@ccom.unh.edu">Roland Arsenault</author>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>drix_msgs</depend>
  <depend>marine_ais_tools</depend>
  <depend>mru_transform</depend>
  <depend>project11_msgs</depend>
  <depend>project11</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  
</package>
